--- a/src/Language/Parser copy.txt
+++ b/src/Language/Parser copy.txt
@@ -18,9 +18,8 @@ init returns[[]interfaces.Command result] :
     c = commands EOF {$result = $c.result             } |
     EOF              {$result = []interfaces.Command{}} ;
 
-commands returns[[]interfaces.Command result] :
-    l = commands c = command {$result = $l.result;; $result = append($result, $c.result)} |
-    c = command              {$result = []interfaces.Command{$c.result}                 } ;
+commands returns[[]interfaces.Command result] locals[[]interfaces.Command cmds = []interfaces.Command{}] :
+    (c = command {$cmds = append($cmds, $c.result)})* {$result = $cmds} ;
 
 command returns[interfaces.Command result] :
     c1 = execute {$result = $c1.result} |
@@ -30,34 +29,28 @@ command returns[interfaces.Command result] :
     c21 = commentary {$result = $c21.result} |
     exit ;
 
-execute returns[*commands.Execute result] :
-    e = RW_execute RW_path TK_equ p = TK_path {$result = commands.NewExecute($e.line, $e.pos, map[string]string{"path": $p.text})} |
-    e = RW_execute                            {$result = commands.NewExecute($e.line, $e.pos, map[string]string{})               } ;
+execute returns[*commands.Execute result] locals[map[string]string params = map[string]string{}] :
+    e = RW_execute (RW_path TK_equ p = TK_path {$params = map[string]string{"path": $p.text}})? {$result = commands.NewExecute($params, $e.line, $e.pos)} ;
 
 mkdisk returns[*commands.Mkdisk result] :
-    m = RW_mkdisk p = mkdiskparams {$result = commands.NewMkdisk($m.line, $m.pos, $p.result)                                  } |
-    m = RW_mkdisk                  {$result = commands.NewMkdisk($m.line, $m.pos, map[string]string{"fit": "FF", "unit": "M"})} ;
+    m = RW_mkdisk p = mkdiskparams {$result = commands.NewMkdisk($m.line, $m.pos, $p.result)};
 
 mkdiskparams returns[map[string]string result] :
-    l = mkdiskparams p = mkdiskparam {$result = $l.result;; $result[$p.result[0]] = $p.result[1]                       } |
-    p = mkdiskparam                  {$result = map[string]string{"fit": "FF", "unit": "M", $p.result[0]: $p.result[1]}};
+    {$result = map[string]string{"fit": "FF", "unit": "M"}} (p = mkdiskparam {$result[$p.result[0]] = $p.result[1]})* ;
 
 mkdiskparam returns[[]string result] :
     RW_size TK_equ v1 = TK_number {$result = []string{"size", $v1.text}} |
     RW_fit  TK_equ v2 = TK_fit    {$result = []string{"fit",  $v2.text}} |
     RW_unit TK_equ v3 = TK_unit   {$result = []string{"unit", $v3.text}} ;
 
-rmdisk returns[*commands.Rmdisk result] :
-    r = RW_rmdisk RW_driveletter TK_equ p = TK_id {$result = commands.NewRmdisk($r.line, $r.pos, map[string]string{"driveletter": $p.text})} |
-    r = RW_rmdisk                                 {$result = commands.NewRmdisk($r.line, $r.pos, map[string]string{})                      } ;
+rmdisk returns[*commands.Rmdisk result] locals[map[string]string params = map[string]string{}] :
+    r = RW_rmdisk (RW_driveletter TK_equ p = TK_id {$params = map[string]string{"driveletter": $p.text}})? {$result = commands.NewRmdisk($r.line, $r.pos, $params)} ;
 
 rep returns[*commands.Rep result] :
-    r = RW_rep p = repparams {$result = commands.NewRep($r.line, $r.pos, $p.result)          } |
-    r = RW_rep               {$result = commands.NewRep($r.line, $r.pos, map[string]string{})} ;
+    r = RW_rep p = repparams {$result = commands.NewRep($r.line, $r.pos, $p.result)} ;
 
 repparams returns[map[string]string result] :
-    l = repparams p = repparam {$result = $l.result;; $result[$p.result[0]] = $p.result[1]} |
-    p = repparam               {$result = map[string]string{$p.result[0]: $p.result[1]}   } ;
+    {$result = map[string]string{}} (p = repparam {$result[$p.result[0]] = $p.result[1]})* ;
 
 repparam returns[[]string result] :
     RW_name TK_equ v1 = name    {$result = []string{"name", $v1.text}} |
